--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/router": "9.0.5",
     "@auth0/angular-jwt": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "4.1.3",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
     "core-js": "3.6.4",
+    "firebase": "^7.14.5",
     "ngx-clipboard": "13.0.0",
     "ngx-toastr": "12.0.0",
     "nouislider": "13.1.1",
