--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "9.0.5",
     "@angular/compiler": "9.0.5",
     "@angular/core": "9.0.5",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "9.0.5",
     "@angular/http": "7.2.16",
     "@angular/localize": "^9.0.5",
@@ -24,7 +25,6 @@
     "@angular/router": "9.0.5",
     "@auth0/angular-jwt": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
-    "angularfire2": "^5.4.2",
     "bootstrap": "4.1.3",
     "chart.js": "2.7.3",
     "clipboard": "2.0.4",
